feat.0004: fix jenkins - removed MaxPermSize